# ocaml-simplechat

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  simplechat.opam
src/: SimpleChat.ml  SimpleChatPrettyTextUI.ml  SimpleChatTextUI.ml  SimpleChatWebUI.ml  SimpleChat_Protocol.ml  jbuild  run_sc_tests.ml  sc_client.ml  sc_server.ml
webstatic/: chat.js  index.html  style.css
